2008-08-19 Ingo Renner  <ingo@typo3.org>

	* added application/widget selector to flexform

2008-08-08 Ingo Renner  <ingo@typo3.org>

	* added Application Manager
	* added command interface
	* added fe_users table extension fields
	* added initial community application class
	* added initial user gateway class
	* added initial DB field labels
	* made ApplicationManager a Singleton
	* changed the community application to be abstract
	* added interface for community application widgets

2008-08-07 Ingo Renner  <ingo@typo3.org>

	* initial code generated with kickstarter
	* added initial classes and structure
	* added fields to fe_users